<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_BCH_IO" Id="{43e2a3fa-add7-4ee5-843f-5d3ee6285993}">
    <Declaration><![CDATA[TYPE T_BCH_IO :
STRUCT
	In_bolSensorTrigScan: REFERENCE TO BOOL;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>